table working, next step make clickable

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,32 @@
     <title th:text="${title}"></title>
 </head>
 <body>
-
+<table>
+    <tr>
+        <th>Cheese</th>
+        <th>Meat</th>
+        <th>Fruit</th>
+        <th>Savory</th>
+        <th>Sweet</th>
+        <th>Carb</th>
+    </tr>
+    <tr>
+        <td>Espresso BellaVitano®</td>
+        <td>Summer Sausage</td>
+        <td>Cotton Candy Grapes</td>
+        <td>Beer Nuts</td>
+        <td>Dark Chocolate Covered Espresso Beans</td>
+        <td>Ritz Butter Crackers</td>
+    </tr>
+    <tr>
+        <td>Marieke Foenegreek Gouda</td>
+        <td>Summer Sausage Pork</td>
+        <td>Cosmic Crisp Apples</td>
+        <td>Mixed Nuts</td>
+        <td>Caramel Corn Jelly Bellies</td>
+        <td>Chicken and a Biscuit</td>
+    </tr>
+</table>
 
 </body>
 </html>
