--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <title th:text="${title}"></title>
 </head>
+<style>
+    .content-table {
+    border-collapse:collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    min-width: 400px;
+
+    }
+
+    .content-table thead tr {
+        background-color: #087311;
+        color: #FFFFFF;
+        text-align: left;
+        font-weight: bold;
+    }
+
+</style>
 <body>
-<table>
+<h1>Charcuterie Board Test</h1>
+<table class="content-table">
+    <thead>
     <tr>
         <th>Cheese</th>
         <th>Meat</th>
@@ -14,6 +33,8 @@
         <th>Sweet</th>
         <th>Carb</th>
     </tr>
+    </thead>
+    <tbody>
     <tr>
         <td>Espresso BellaVitano®</td>
         <td>Summer Sausage</td>
@@ -30,6 +51,7 @@
         <td>Caramel Corn Jelly Bellies</td>
         <td>Chicken and a Biscuit</td>
     </tr>
+    </tbody>
 </table>
 
 </body>
