--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,22 @@
         font-weight: bold;
     }
 
+    .content-table th,
+    .content-table td {
+        padding: 12px 15px;
+    }
+
+    .content-table tbody tr {
+        border-bottom:1px solid #dddddd;
+    }
+
+    .content-table tbody tr:nth-of-type(even) {
+        background-color: #f3f3f3;
+    }
+
+    .content-table tbody tr:last-of-type {
+        border-bottom: 2px solid #087311;
+    }
 </style>
 <body>
 <h1>Charcuterie Board Test</h1>
@@ -42,6 +58,14 @@
         <td>Beer Nuts</td>
         <td>Dark Chocolate Covered Espresso Beans</td>
         <td>Ritz Butter Crackers</td>
+    </tr>
+    <tr>
+        <td>Marieke Foenegreek Gouda</td>
+        <td>Summer Sausage Pork</td>
+        <td>Cosmic Crisp Apples</td>
+        <td>Mixed Nuts</td>
+        <td>Caramel Corn Jelly Bellies</td>
+        <td>Chicken and a Biscuit</td>
     </tr>
     <tr>
         <td>Marieke Foenegreek Gouda</td>
