Make table look pretty, messing with css

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,8 @@
         color: #FFFFFF;
         text-align: left;
         font-weight: bold;
+        border-radius: 5px 5px 0 0;
+        overflow: hidden;
     }
 
     .content-table th,
@@ -36,6 +38,7 @@
     .content-table tbody tr:last-of-type {
         border-bottom: 2px solid #087311;
     }
+
 </style>
 <body>
 <h1>Charcuterie Board Test</h1>
